@@ -53,7 +53,8 @@
         "@type": "org:Organization",
         "name": "TEST - State Economic Council"
       },
-      "title": "TEST - State Workforce by Generation (2011-2015)"
+      "title": "TEST - State Workforce by Generation (2011-2015)",
+      "dataQuality": true
     }
   ]
 }
